Before starting on EF Core

--- a/BookStore/BookStore/Views/Home/ContactUs.cshtml
+++ b/BookStore/BookStore/Views/Home/ContactUs.cshtml
@@ -1,11 +1,12 @@
 ﻿
-<h1>About Us</h1>
-<p>We dont have a physical office</p>
+
+<h1>ContactUs</h1>
 @section breadcrums {
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
           <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">About Us</li>
+        <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
       </ol>
     </nav>
 }
+
