--- a/BookStore/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,18 +1,62 @@
-﻿
-@{
-    Layout = null;
+﻿@model IEnumerable<BookModel>
+@{ 
+     ViewData["Title"] = "All Book";
 }
 
-<!DOCTYPE html>
+@{ 
+    var parameters = new Dictionary<string, string>()
+    {
+        {"name","Dhananjay"},
+        {"company","EY"},
+        {"appName","bookstore"}
+        };
+}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>GetAllBooks</title>
-</head>
-<body>
-    <h1>All Boooks View</h1>
-    <button>Click Me
-    </button>
-</body>
-</html>
+<div class="container">
+    <h3 class="display-4">All books</h3>
+    <div class="row">
+
+        @foreach (var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    @*<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>*@
+                    <img class="card-img-top" width="100%" height="225" src="~/images/bookCovers/bookCover3.jpg" alt="card image" />
+                    <div class="card-body">
+                        <h3 class="card-title">@book.Title</h3>
+                        <p class="card-text">Brief introduction about the book</p>
+                        <p>Another description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a asp-controller="book" asp-action="GetBook" asp-route-Id=@book.Id 
+                                   asp-route-NameOfBook=@book.Title                                   
+                                   class="btn btn-sm btn-outline-secondary">View Details</a>
+                            </div>
+                            <small class="text-muted">@book.Author</small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        }
+
+    </div>
+</div>
+
+@section breadcrums {
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
+            <li class="breadcrumb-item"><a asp-controller="Book" asp-action="GetAllBooks">Book</a></li>
+            <li class="breadcrumb-item active" aria-current="page">All Books</li>
+        </ol>
+    </nav>
+}
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+
+        })
+    </script>
+}
