--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -1,28 +1,86 @@
-﻿
-@{
-    Layout = null;
+﻿@{ 
+    dynamic data = ViewBag.data;   
 }
+<section class="jumbotron text-center">
+    <div class="container">
 
-<!DOCTYPE html>
+        <h1>Welcome to Anvi's Bookstore </h1>
+        <p class="lead text-muted">
+            @*@data.Id  @data.Name*@
+            This is Anvi's bookstore. She will help you to buy the book you like at a resonable price from someone who has already read this
+            book and wants to explore next set of book. She will also help you sell your used books.
+        </p>
+        <p>
+            @ViewData["customProperty"]
+        </p>
+        <p>
+            <a href="#" class="btn btn-primary my-2">Search Books</a>
+        </p>
+    </div>
+</section>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <link href="~/css/StyleSheet.css" rel="stylesheet" />
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-</head>
-<body class="container">
-    <img src="~/images/mainLogoSmall.png" alt="Logo" class="logoimage" />
-    <!--<img src="~/MyStaticFiles/images.png" />-->
-    <h1 class="h1">Welcome to Book store application</h1>
-    <div class="btn-danger">Click Me</div>
-</body>
-<script src="~/lib/jquery/jquery.js"></script>
-</html>
+<div class="py-5 bg-light">
+    <div class="container">
+        <div><h2 class="h2">Top Books</h2></div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" width="100%" height="225" src="~/images/bookCovers/book1.jpg" alt="card image" />
+                    <div class="card-body">
+                        <p class="card-text">Short Description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">View Details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
 
-<script>
-    $(document).ready(function () {
-        alert("Page loaded");
-    })
-</script>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" width="100%" height="225" src="~/images/bookCovers/bookCover3.jpg" alt="card image" />
+                    <div class="card-body">
+                        <p class="card-text">Short Description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">View Details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" width="100%" height="225" src="~/images/bookCovers/bookCover7.jpg" alt="card image" />
+                    <div class="card-body">
+                        <p class="card-text">Short Description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">View Details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section breadcrums{
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+    </nav>
+}
+@section scripts{
+    <script>
+        $(document).ready(function () {
+
+        })
+    </script>
+}
